@@ -1,4 +1,13 @@
 2002-12-02  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ include/pqxx/cachedresult.h:
+  - Implemented empty()
+  - Added m_Lower
+  - clear() no longer forgets size information, just flushes cache
+ src/cachedresult.h:
+  - Simplified binary search logic using m_Lower
+  - Removed special case (-1 for unknown) from m_Upper
+  - No longer rely on m_Cache to provide highest known-to-exist block
+2002-12-02  Jeroen T. Vermeulen <jtv@xs4all.nl>
  src/cursor.cxx:
   - Use ALL and BACKWARD ALL instead of highest/lowest representable numbers
  test/test19.cxx, test/test38.cxx:
